--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <h3>And find the perfect partner to fullfill it</h3>
         <button>Find your holiday partner</button>
     </section>
-    <section></section>
+    <section>
+<h2>Meet a partner for your best holiday</h2>
+<ul>
+    <li>
+        <img src="" alt="">
+        <h2>Bradley Hunter
+        </h2>
+        <p>Based in Chicago. I love playing tennis and loud music.</p>
+    </li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+    </section>
 </body>
 </html>
