--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="hero-but">Find your holiday partner</button>
     </section>
     <section class="partners">
-      <h2>Meet a partner for your best holiday</h2>
+      <h2 class="partners-title">Meet a partner for your best holiday</h2>
       <ul class="foto-list">
         <li class="foto-item">
           <img src="./images/desk-1.png" alt="">
