--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <p class="partners-text">Based in Chicago. I love playing tennis and loud music.</p>
         </li>
       </ul>
+      <button class="partners-button">
+        See other partners
+      </button>
     </section>
   </body>
 </html>
