--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section class="hero">
-        <div class="hero-boks">
-      <h2 class="hero-logo">URLAUBSGLÜCK</h2>
-      <a href="" class="log-in">Log in</a>
-      <a href="" class="sign-up">Sign up</a>
-    </div>
+      <div class="hero-boks">
+        <h2 class="hero-logo">URLAUBSGLÜCK</h2>
+        <a href="" class="log-in">Log in</a>
+        <a href="" class="sign-up">Sign up</a>
+      </div>
       <h1 class="hero-title">Share your holiday dreams</h1>
       <h3 class="hero-text">And find the perfect partner to fullfill it</h3>
       <button class="hero-but">Find your holiday partner</button>
@@ -22,29 +22,36 @@
       <h2 class="partners-title">Meet a partner for your best holiday</h2>
       <ul class="foto-list">
         <li class="foto-item">
-          <img src="./images/desk-1.png" alt="">
+          <img src="./images/desk-1.png" alt="" />
           <h2 class="partners-name">Bradley Hunter</h2>
-          <p class="partners-text">Based in Chicago. I love playing tennis and loud music.</p>
+          <p class="partners-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
         </li>
         <li class="foto-item">
-            <img src="./images/desk-2.png" alt="">
-            <h2 class="partners-name">Heather Walker</h2>
-            <p class="partners-text">I'm a happy person that loves cats and climbing on mountains.</p>
+          <img src="./images/desk-2.png" alt="" />
+          <h2 class="partners-name">Heather Walker</h2>
+          <p class="partners-text">
+            I'm a happy person that loves cats and climbing on mountains.
+          </p>
         </li>
         <li class="foto-item">
-            <img src="./images/desk-3.png" alt="">
-            <h2 class="partners-name">Lucas Marsha</h2>
-            <p class="partners-text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+          <img src="./images/desk-3.png" alt="" />
+          <h2 class="partners-name">Lucas Marsha</h2>
+          <p class="partners-text">
+            I get my inspiration from nature and objects around me. I have a
+            passion to colours, typography and skateboards.
+          </p>
         </li>
         <li class="foto-item">
-            <img src="./images/desk-4.png" alt="">
-            <h2 class="partners-name">Bradley Hunter</h2>
-            <p class="partners-text">Based in Chicago. I love playing tennis and loud music.</p>
+          <img src="./images/desk-4.png" alt="" />
+          <h2 class="partners-name">Bradley Hunter</h2>
+          <p class="partners-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
         </li>
       </ul>
-      <button class="partners-button">
-        See other partners
-      </button>
+      <button class="partners-button">See other partners</button>
     </section>
   </body>
 </html>
